# validator-blacklist

./: Anchor.toml  BATCH_BAN_USAGE.md  Cargo.toml  README.md  ban.csv  codama.json  config.json  package.json  startup.txt
client/cli/: Cargo.toml  README.md
client/cli/src/: cli.rs  commands.rs  main.rs  validator_parser.rs
programs/validator_blacklist/: Cargo.toml
programs/validator_blacklist/src/: authority_checks.rs  error.rs  lib.rs  stake_pool_helpers.rs  state.rs
programs/validator_blacklist/src/instructions/: delegate.rs  init_config.rs  mod.rs  undelegate.rs  unvote_add.rs  unvote_remove.rs  update_config.rs  update_config_admin.rs  vote_add.rs  vote_remove.rs
tests/: validator_blacklist.ts
tests/accounts/: stakePool.json
