[package]
name = "validator-blacklist-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.0"
solana-sdk = "2.0"
solana-program = "2.0"
solana-system-interface = "2.0"
solana-sdk-ids = "2.0"
anchor-client = "0.31"
anchor-lang = "0.31"
borsh = "1.0"
bs58 = "0.5"
validator_blacklist = { path = "../../programs/validator_blacklist", features = ["no-entrypoint"] }
