[package]
name = "validator-blacklist-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "validator-blacklist-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
solana-client = "2.0"
solana-sdk = "2.0"
solana-sdk-ids = "2.0"
anchor-client = "0.31"
anchor-lang = "0.31"
bs58 = "0.5"
validator_blacklist = { path = "../../programs/validator_blacklist", features = ["no-entrypoint"] }
bincode = "1.3.3"
base64 = "0.22.1"
