[package]
name = "validator_blacklist"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "validator_blacklist"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-panic = []
custom-heap = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
spl-stake-pool = { version = "2.0.0", features = [ "no-entrypoint" ] }
